--- a/monitoramento-consumo-de-agua/style.css
+++ b/monitoramento-consumo-de-agua/style.css
@@ -24,10 +24,45 @@ h1 {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.253);
     padding: 20px;
 }
-
 .title{
-    font-size: 40px;
+   font-size: 1.1rem;
 }
+
+.title-mobile{
+    display: none;
+}
+
+#alertaVazamento {
+    display: none;
+    width: 80%;
+    padding: 20px 30px;
+    margin-bottom: 15px;
+    border-radius: 12px;
+    background-color: #f8d7da;
+    color: #842029;
+    font-weight: bold;
+    font-size: 22px;
+    text-align: center;
+    transition: all 0.5s ease;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.253);  
+
+}
+
+#fecharAlertaVazamento {
+    margin-top: 10px;
+    padding: 8px 15px;
+    border: none;
+    background-color: #97262f;
+    color: #f8d7da;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#fecharAlertaVazamento:hover {
+    background-color: #6a1b1e;
+}
+
 .metrics-top {
     display: flex;
     justify-content: space-between;
@@ -95,6 +130,38 @@ h1 {
     margin: 0 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.253); 
 }
+
+.mesMaiorConsumo {
+    display: flex;
+    flex-direction: row;
+    align-self: flex-start;
+    margin-left: 30px;
+    margin-bottom: 50px;
+    width: 86%;
+}
+
+.mesMaiorConsumo-text{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    text-align: start;
+    margin-left: 2%;
+
+}
+
+.icon-grafico {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+}
+
+.icon-grafico img {
+    width: 90%;
+    height: auto;
+}
+
 .metric h2 {
     margin: 0;
     font-size: 2rem;
@@ -120,7 +187,6 @@ h1 {
     cursor: pointer;
     font-weight: bold;
 }
-
 .filtro-tempo button:hover {
     background-color: #142881;
 }
@@ -139,17 +205,106 @@ h1 {
     padding: 20px;
     padding-bottom: 20px;
 }
-
 canvas {
     width: 93% !important;
     height: 380px !important;
 }
 
 @media (max-width: 600px) {
-    .metrics {
-    flex-direction: column;
+    .dashboard {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+        width: 100%;
     }
-    .metric {
-    margin: 10px 0;
+    .title{
+        display: none;
     }
+    .title-mobile{
+        display: flex;
+        text-align: center;
+        font-size: 28px; 
+        font-weight: bold;
+    }
+    .icon{
+        display: none;
+    }
+    .canvas-title {
+        font-size: 22px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .canvas-container {
+        flex-direction: column;
+        margin: 10px;
+        padding: 15px;
+    }
+
+    canvas {
+        width: 100% !important;
+        height: 300px !important;
+    }
+    .filtro-tempo {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 8px;
+        width: 90%;
+        padding: 0 10px;
+    }
+
+    .filtro-tempo button {
+        min-width: auto;
+        padding: 12px 8px;
+        font-size: 14px;
+    }
+    .subtitle{
+        font-size: 25px;
+    }
+    .subtitle-infos{
+        margin-top: 0;
+        margin-right: 0;
+        padding-left: 0;
+        font-size: 20px;
+    }
+
+    .metric-top{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .metrics-bottom {
+        flex-direction: column;
+    }
+    .metric-bottom {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        width: 80% ;
+        margin-bottom: 30px;
+    }
+    .mesMaiorConsumo {
+        font-size: 16px;
+        width: 80%;
+        margin-left: 10px;
+        margin-bottom: 50px;
+    }
+    .mesMaiorConsumo-text{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin-left: 0;
+
+    }
+
+    .icon-grafico{
+        display: none;
+    }
+
 }
