--- a/monitoramento-consumo-de-agua/style.css
+++ b/monitoramento-consumo-de-agua/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: 'Inter', sans-serif;
-    background-color: rgba(235, 235, 235, 0.288); /* azul bem claro e transparente */
-    margin: 0;
+    background-color: rgba(235, 235, 235, 0.288);
     padding: 20px;
     color: #2c3e50;
     display: flex;
@@ -31,7 +30,6 @@ h1 {
 .title-mobile{
     display: none;
 }
-
 #alertaVazamento {
     display: none;
     width: 80%;
@@ -45,9 +43,7 @@ h1 {
     text-align: center;
     transition: all 0.5s ease;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.253);  
-
 }
-
 #fecharAlertaVazamento {
     margin-top: 10px;
     padding: 8px 15px;
@@ -58,11 +54,9 @@ h1 {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
-
 #fecharAlertaVazamento:hover {
     background-color: #6a1b1e;
 }
-
 .metrics-top {
     display: flex;
     justify-content: space-between;
@@ -70,7 +64,6 @@ h1 {
     margin: 50px;
     margin-bottom: 30px;
     width: 90%;
-
 }
 .metric-top {
     display: flex;
@@ -92,7 +85,6 @@ h1 {
     display: flex;
     justify-content: center;
     width: 50%;
-
 }
 .icon img {
     width: 70%;
@@ -130,7 +122,6 @@ h1 {
     margin: 0 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.253); 
 }
-
 .mesMaiorConsumo {
     display: flex;
     flex-direction: row;
@@ -139,7 +130,6 @@ h1 {
     margin-bottom: 50px;
     width: 86%;
 }
-
 .mesMaiorConsumo-text{
     width: 60%;
     display: flex;
@@ -147,32 +137,26 @@ h1 {
     align-self: center;
     text-align: start;
     margin-left: 2%;
-
 }
-
 .icon-grafico {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 40%;
 }
-
 .icon-grafico img {
     width: 90%;
     height: auto;
 }
-
 .metric h2 {
     margin: 0;
     font-size: 2rem;
     color: #1a32a0;
-;
 }
 .metric p {
     margin: 5px 0 0;
     font-weight: 600;
 }
-
 .filtro-tempo {
     margin: 20px 0;
     text-align: center;
@@ -236,13 +220,11 @@ canvas {
         text-align: center;
         margin-bottom: 10px;
     }
-
     .canvas-container {
         flex-direction: column;
         margin: 10px;
         padding: 15px;
     }
-
     canvas {
         width: 100% !important;
         height: 300px !important;
@@ -254,7 +236,6 @@ canvas {
         width: 90%;
         padding: 0 10px;
     }
-
     .filtro-tempo button {
         min-width: auto;
         padding: 12px 8px;
@@ -269,7 +250,6 @@ canvas {
         padding-left: 0;
         font-size: 20px;
     }
-
     .metric-top{
         display: flex;
         align-items: center;
@@ -300,11 +280,8 @@ canvas {
         justify-content: center;
         text-align: center;
         margin-left: 0;
-
     }
-
     .icon-grafico{
         display: none;
     }
-
 }
